--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,8 @@ matrix:
   include:
     - go: 1.13.x
       addons:
-        postgresql: "11"
+        postgresql: "10"
       dist: bionic
-    - go: 1.13.x
-      addons:
-        postgresql: "11"
-      dist: xenial
     - go: 1.13.x
       addons:
         postgresql: "10"
@@ -17,7 +13,15 @@ matrix:
     - go: 1.13.x
       addons:
         postgresql: "9.6"
+      dist: bionic
+    - go: 1.13.x
+      addons:
+        postgresql: "9.6"
       dist: xenial
+    - go: 1.13.x
+      addons:
+        postgresql: "9.5"
+      dist: bionic
     - go: 1.13.x
       addons:
         postgresql: "9.5"
