--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,5 +22,9 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
+      - run:
+        name: Setup Environment Variables
+        command: |
+          echo 'export PGSSLMODE=disable' >> $BASH_ENV
       - run: go get -v -t -d ./...
       - run: go test -v ./...
