--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,26 +5,18 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version
       - image: circleci/golang:1.13
 
-      # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       - image: circleci/postgres:12
+        environment:
+          PGSSLMODE: disable
 
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
     working_directory: /go/src/github.com/takanoriyanagitani/file2db
     steps:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run:
-        name: Setup Environment Variables
-        command: |
-          echo 'export PGSSLMODE=disable' >> $BASH_ENV
       - run: go get -v -t -d ./...
       - run: go test -v ./...
