--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - image: circleci/postgres:12
         environment:
           PGSSLMODE: disable
+          POSTGRES_USER: postgres
 
     working_directory: /go/src/github.com/takanoriyanagitani/file2db
     steps:
