trying to connect without inline env setting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,4 +21,4 @@ jobs:
 
       # specify any bash command here prefixed with `run: `
       - run: go get -v -t -d ./...
-      - run: PGSSLMODE=disable go test -v ./...
+      - run: go test -v ./...
